fixed flex wrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -411,20 +411,15 @@ p {
 .portfolio-cards {
     list-style-type:none;
     display: flex;
-    justify-content:center;
     flex-wrap: wrap;
+    justify-content:center;
     gap: 30px 30px; 
 
    /*background-color: brown;  */
 }
-.portfolio-card {
-    
-    width: 370px;
-    margin: 0px;   
-}
+.portfolio-card {flex-basis: calc((100% - 60px)/3);}
 .portfolio-card__caption {
     width: 370px;
-    margin: 0px;
     padding: 15px 24px 20px;
 
     border-left: 1px solid var(--border-color-white2);
